<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >Poker
    </string>
    <string name="action_settings" >Settings
    </string>
    <string name="hello_world" >Hello world!
    </string>
    <string name="hello_worl2d" >Hello worldNNNNN
    </string>
    <string name="one" >A
    </string>
    <string name="two" >2
    </string>
    <string name="three" >3
    </string>
    <string name="four" >4
    </string>
    <string name="five" >5
    </string>
    <string name="six" >6
    </string>
    <string name="seven" >7
    </string>
    <string name="eight" >8
    </string>
    <string name="nine" >9
    </string>
    <string name="call" >Call
    </string>
    <string name="pass" >Pass
    </string>



    <string name="spade" >Spade</string>
    <string name="heart" >Heart</string>
    <string name="diamond" >Diamond</string>
    <string name="club" >Club</string>

    <string name="make_room_title" >Making Room</string>
    <string name="make_room_room_name" >Room Name:</string>
    <string name="make_room_room_name_hide" >Room name</string>
    <string name="make_room_submit" >Make!!</string>


    <string name="room_list">Room List</string>
    <string name="room_list_refresh">Refresh</string>
    <string name="table_main_id">Room ID</string>
    <string name="table_main_name">Room Name</string>
    <string name="table_main_people">Room People</string>
    <string name="table_main_join">Join</string>

    <string name="table_waiting_word">Current player in room: %d</string>
    <string name="table_game_now_playing">Current player: %s</string>

    <string name="table_player_name_0">North</string>
    <string name="table_player_name_1">East</string>
    <string name="table_player_name_2">South</string>
    <string name="table_player_name_3">West</string>

    <string name="team_score_0">N.S. Score: %d</string>
    <string name="team_score_1">E.W. Score: %d</string>

    <string name="call_word_my">It is your turn. Now at: %s</string>
    <string name="call_word_other">It is not your turn. Now at: %s</string>

    <string name="game_turn_my">It is your turn.</string>
    <string name="game_turn_other">It is not your turn.</string>
</resources>
