<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/make_room_title"
            android:id="@+id/textView"
            android:layout_row="0"
            android:layout_column="0"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/make_room_room_name"
            android:id="@+id/textView2"
            android:layout_row="1"
            android:layout_column="0"/>

    <EditText
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:id="@+id/room_name_input"
            android:layout_row="1"
            android:layout_column="1"
            android:hint="@string/make_room_room_name_hide"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_room_submit"
            android:id="@+id/button_make_room_submit"
            android:onClick="makeRoomSubmit"
            android:layout_row="2"
            android:layout_column="1"/>

</GridLayout>