<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spadeButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="11dp"
            android:src="@drawable/spade"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heartButton"
            android:layout_alignTop="@+id/spadeButton"
            android:layout_toRightOf="@+id/spadeButton"
            android:layout_marginLeft="14dp"
            android:src="@drawable/heart"
            android:layout_alignBottom="@+id/spadeButton"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/diamondButton"
            android:src="@drawable/diamond"
            android:layout_alignTop="@+id/heartButton"
            android:layout_toRightOf="@+id/heartButton"
            android:layout_marginLeft="12dp"
            android:layout_alignBottom="@+id/heartButton"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clubButton"
            android:src="@drawable/club"
            android:layout_alignTop="@+id/diamondButton"
            android:layout_toRightOf="@+id/diamondButton"
            android:layout_marginLeft="12dp"
            android:layout_alignBottom="@+id/diamondButton"/>

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:id="@+id/oneButton"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/spadeButton"/>

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:id="@+id/twoButton"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/spadeButton"/>

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:id="@+id/threeButton"
            android:layout_alignTop="@+id/twoButton"
            android:layout_toRightOf="@+id/heartButton"/>

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:id="@+id/fourButton"
            android:layout_alignBottom="@+id/threeButton"
            android:layout_toRightOf="@+id/diamondButton"/>

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:id="@+id/fiveButton"
            android:layout_alignBottom="@+id/fourButton"
            android:layout_toRightOf="@+id/clubButton"/>

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:id="@+id/sixButton"
            android:layout_alignTop="@+id/fiveButton"
            android:layout_toRightOf="@+id/fiveButton"
            android:layout_marginLeft="18dp"/>

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:id="@+id/sevenButton"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/sixButton"
            android:layout_marginLeft="10dp"/>

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:id="@+id/eightButton"
            android:layout_below="@+id/oneButton"
            android:layout_alignLeft="@+id/oneButton"/>

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            android:id="@+id/nineButton"
            android:layout_below="@+id/twoButton"
            android:layout_alignLeft="@+id/twoButton"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:id="@+id/callButton"
            android:layout_alignTop="@+id/nineButton"
            android:layout_alignLeft="@+id/fiveButton"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:id="@+id/passButton"
            android:layout_alignTop="@+id/callButton"
            android:layout_alignRight="@+id/sevenButton"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_one"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/eightButton"
            android:src="@drawable/c000"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_two"
            android:layout_alignBottom="@+id/card_one"
            android:layout_toRightOf="@+id/eightButton"
            android:src="@drawable/c000"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_three"
            android:layout_alignBottom="@+id/card_two"
            android:layout_toRightOf="@+id/card_two"
            android:src="@drawable/c000"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_four"
            android:layout_alignBottom="@+id/card_three"
            android:layout_toRightOf="@+id/card_three"
            android:src="@drawable/c000"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_five"
            android:layout_alignBottom="@+id/card_four"
            android:layout_toRightOf="@+id/card_four"
            android:src="@drawable/c000"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_six"
            android:layout_alignBottom="@+id/card_five"
            android:layout_toRightOf="@+id/card_five"
            android:src="@drawable/c000"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_seven"
            android:layout_alignBottom="@+id/card_six"
            android:layout_toRightOf="@+id/card_six"
            android:src="@drawable/c000"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_eight"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/card_seven"
            android:src="@drawable/c000"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_nine"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/card_eight"
            android:src="@drawable/c000"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_ten"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/card_nine"
            android:src="@drawable/c000"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_eleven"
            android:layout_alignBottom="@+id/card_ten"
            android:layout_toRightOf="@+id/card_ten"
            android:src="@drawable/c000"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_twelve"
            android:layout_alignBottom="@+id/card_eleven"
            android:layout_toRightOf="@+id/card_eleven"
            android:src="@drawable/c000"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_thirteen"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/card_twelve"
            android:src="@drawable/c000"/>
</RelativeLayout>
