<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/table_game_now_playing"
            android:id="@+id/table_game_display_now_player"
            android:layout_row="0"
            android:layout_column="0"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/table_card_0"
            android:layout_row="1"
            android:layout_column="2"
            android:src="@drawable/c000"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/table_card_3"
            android:layout_row="2"
            android:layout_column="1"
            android:src="@drawable/c000"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/table_card_2"
            android:layout_row="3"
            android:layout_column="2"
            android:src="@drawable/c000"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/table_card_1"
            android:layout_row="2"
            android:layout_column="3"
            android:src="@drawable/c000"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_score_0"
            android:id="@+id/table_game_team_score_0"
            android:layout_row="4"
            android:layout_column="4"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_score_1"
            android:id="@+id/table_game_team_score_1"
            android:layout_row="5"
            android:layout_column="4"/>
</GridLayout>